# hirct

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  STATUS.md  known-limitations.md  mkdocs.yml  requirements-optional.txt  requirements.txt  tool-versions.env
.cursor/agents/: cxxrtl-poc.md
.cursor/convention/: bash.md  c.md  cpp.md  make.md  python.md  rfc.md  verilog.md  yaml.md
.cursor/docs/: testing.md
.cursor/docs/plans/: 2025-11-22-opencode-support-implementation.md  2025-11-28-skills-improvements-from-user-feedback.md
.cursor/hooks/: session-start.sh
.cursor/rules/: agent-behavior.mdc  cpp-hirct.mdc  hirct-project.mdc  makefile-hirct.mdc  plan-docs-hirct.mdc  python-hirct.mdc  verilog-hirct.mdc
.cursor/skills/: ._executing-plans  README.md
.cursor/skills/auditing-plan-report-sync/: SKILL.md
.cursor/skills/dispatching-parallel-agents/: SKILL.md
.cursor/skills/finishing-a-development-branch/: SKILL.md
.cursor/skills/plan-readiness-check/: SKILL.md
.cursor/skills/receiving-code-review/: SKILL.md
.cursor/skills/session-handoff/: SKILL.md
.cursor/skills/subagent-driven-development/: SKILL.md  spec-reviewer-prompt.md
.cursor/skills/systematic-debugging/: CREATION-LOG.md  SKILL.md  condition-based-waiting.md  find-polluter.sh  test-pressure-1.md
.cursor/skills/test-driven-development/: testing-anti-patterns.md
.cursor/skills/verification-before-completion/: SKILL.md
.cursor/skills/writing-plans/: SKILL.md
.cursor/skills/writing-skills/: SKILL.md  anthropic-best-practices.md  persuasion-principles.md  testing-skills-with-subagents.md
.cursor/tests/claude-code/: test-subagent-driven-development-integration.sh
.github/workflows/: ci.yml
docs/: architecture.md  index.md  module-status.md  quickstart.md
docs/plans/: 2026-02-16-agent-in-the-loop-doc-unification.md  2026-02-17-pre-execution-gap-resolution.md  2026-02-28-circt-embedding-design.md  2026-03-04-arc-poc-results.md  2026-03-06-genmodel-ir-spec-brainstorm.md  2026-03-06-hirct-output-spec-survey.md  2026-03-08-cxxrtl-poc.md  2026-03-08-hirct-product-strategy.md  2026-03-09-clock-domain-ir-analysis.md  2026-03-10-agent-workflow-guidance.md  2026-03-10-blocker-retrospective.md  2026-03-10-blocker-root-cause-analysis.md  2026-03-10-uart-txd-mismatch-debug.md  2026-03-12-model-comparison-and-prompting-report.md  2026-03-12-parent-session-transcript-report.md  2026-03-12-unexecuted-ideas-and-scenario-options.md  HANDOFF.md  draft-hirct-project-retrospective.md  hirct-convention.md  known-limitations.md  open-decisions.md  reference-commands-and-structure.md  risk-validation-results.md  summary.md
docs/proposal/: 001-hirct-automation-framework.md
examples/fc6161/: rtl
hirct/: .gitignore  CMakeLists.txt  Makefile  known-limitations.md
hirct/include/hirct/Analysis/: FSMAnalysis.h  IRAnalysis.h
hirct/include/hirct/Support/: PathUtils.h  VerilatorPreprocessor.h  VerilogLoader.h
hirct/include/hirct/Transforms/: Passes.h
hirct/integration_test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
hirct/integration_test/hirct-verify/: verify-smoke.test
hirct/integration_test/smoke/: preprocess-verilator.test
hirct/integration_test/smoke/Inputs/: define-smoke.f  define_mod.v
hirct/integration_test/smoke/hybrid/: README.md  matrix-smoke.test  module-gate-red.test
hirct/lib/: CMakeLists.txt
hirct/lib/Analysis/: CMakeLists.txt  FSMAnalysis.cpp  IRAnalysis.cpp
hirct/lib/Support/: CMakeLists.txt  PathUtils.cpp  VerilatorPreprocessor.cpp  VerilogLoader.cpp
hirct/lib/Transforms/: CMakeLists.txt  HirctProcessDeseq.cpp  HirctProcessFlatten.cpp  HirctSignalLowering.cpp  HirctSimCleanup.cpp  HirctUnrollProcessLoops.cpp  Pipeline.cpp
hirct/test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in  test_triage_failures.py
hirct/test/Tools/hirct-gen/: help.test  only-filter-meta.test  option-value-validation.test  preprocess-flag.test
hirct/test/Tools/hirct-gen/Inputs/: define.f
hirct/test/Tools/hirct-verify/: help.test  output-option.test
hirct/test/Transforms/: full-pipeline.mlir  process-deseq.mlir  process-flatten-comb.mlir  process-flatten-dest-args.mlir  process-flatten-diamond.mlir  process-flatten-seq.mlir  process-unroll-loops.mlir  signal-lowering-array-hold.mlir  signal-lowering.mlir  sim-cleanup.mlir
hirct/test/fixtures/: AggregateConstant.mlir  AsyncResetSSA.mlir  Bitcast.mlir  BitcastMod.mlir  CombOnly.mlir  CyclicInstances.mlir  DivMod.mlir  ExtractMask.mlir  FirmemBasic.mlir  ForwardRefChain.mlir  ForwardRefComb.mlir  FourStateFSM.mlir  IcmpCeq.mlir  InstanceCrossRef.mlir  LevelGateway.mlir  LevelGateway.v  MultiClock.mlir  MultiModule.mlir  NegConst64.mlir  NonZeroReset.mlir  Parity.mlir  ParityMod.mlir  ParityWide.mlir  RegisterBlock.mlir  SelfRecursiveArrayMux.mlir  SimpleAnd.v  SsaCollision.mlir  UnrollLoopSgt.mlir  UnsupportedParity.mlir  WideConcat.mlir  WideConstant.mlir  WideSignal.mlir
hirct/tools/hirct-gen/: main.cpp
hirct/tools/hirct-verify/: CMakeLists.txt  main.cpp
hirct/unittests/: CMakeLists.txt
hirct/unittests/Analysis/: CMakeLists.txt  FSMAnalysisTest.cpp
hirct/utils/: setup-env.sh
integration_test/: lit.cfg.py
lib/: CMakeLists.txt
lib/Analysis/: CMakeLists.txt  ModuleAnalyzer.cpp
lib/Support/: CMakeLists.txt  CirctRunner.cpp
test/: lit.cfg.py
test/fixtures/: RVCExpander.mlir
tools/: CMakeLists.txt
tools/hirct-gen/: CMakeLists.txt  main.cpp
tools/hirct-verify/: main.cpp
unittests/: CMakeLists.txt
unittests/Analysis/: CMakeLists.txt  ModuleAnalyzerTest.cpp
utils/: setup-env.sh
(+123 files in other folders)
